<resources>
    <string name="app_name">WhatsappMvvm</string>
    <string name="text_validator_title">Validação</string>
    <string name="text_validator_description">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="text_hint_validator">Digite o código</string>
    <string name="text_button_validator">Validar</string>
    <string name="text_button_login">Logar</string>
    <string name="text_create_account_label">Não possui conta? Cadastre-se</string>
    <string name="text_hint_email_hint">Digite seu email</string>
    <string name="text_hint_password">Digite sua senha</string>
    <string name="text_register_hint_name">Digite seu nome</string>
    <string name="text_register_hint_email">Digite seu e-mail</string>
    <string name="text_register_hint_password">Digite sua senha</string>
    <string name="text_button_register">Cadastrar</string>
    <string name="ERROR_PASSWORD_NOT_STRONG">Favor informar uma senha mais forte</string>
    <string name="action_settings">Configurações</string>
    <string name="action_exit">Sair</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_person_add">Adicionar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>