<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_search"
        android:orderInCategory="300"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search">
    </item>

    <item
        android:id="@+id/action_person_add"
        android:orderInCategory="400"
        android:title="@string/action_person_add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_person_add">
    </item>

</menu>